deploy/prefect-server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-ingress
  annotations:
    spec.ingressClassName: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: prefect.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prefect-server
                port:
                  number: 4200
